Updated with External CSS

--- a/Class Time Table/TimeTable.html
+++ b/Class Time Table/TimeTable.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time Table</title>
     <link rel="icon" type="image" href="Time Table 7th sem CSE.png">
+    <link rel="stylesheet"  href="style.css" >
 </head>
 <body>
     <h2 align="center"><u>Time Table for 7th sem CSE  </u>  </h2>
     <!--Time table starts from here-->
-    <table border="1" width="70%" align="center"> 
+    <table border="1" align="center"> 
         
         <tr>
         <th colspan="11">B.V.V Sangha's</th> <br>
@@ -24,15 +25,15 @@
         </tr>
 
         <tr align="center">
-            <td colspan="3">Department</td>
-            <td colspan="3">CSE</td>
-            <td colspan="5">Semester</td>
+            <td colspan="2">Department</td>
+            <td colspan="3" align="left">CSE</td>
+            <td colspan="6" align="left">Semester : VII (B)</td>
         </tr>
 
         <tr align="center">
         <td colspan="2">Academic Year</td>
-        <td colspan="3">2025-26</td>
-        <td colspan="2">Class Room No.</td>
+        <td colspan="3" align="left">2025-26</td>
+        <td colspan="2" align="left">Class Room No.</td>
         <td colspan="4">Mechanical Seminar Hall</td>
         </tr>
 
@@ -41,31 +42,13 @@
             <td>period</td>
             <td>1</td>
             <td>2</td>
-            <td></td>
-            <td>3</td>
-            <td>4</td>
-            <td></td>
-            <td>5</td>
-            <td>6</td>
-            <td>7</td>
-        </tr>
+                        <td rowspan="8" class="tea"><pre align="center">
 
-        <tr align="center">
-            <td>Time</td>
-            <td>9 AM to 10 AM</td>
-            <td>10 AM to 11 AM</td>
-            <td></td>
-            <td>11:15 AM to 12:15 PM</td>
-            <td>12:15 PM to 1:15 PM</td>
-            <td>1:15 PM to 2 PM</td>
-            <td colspan="3">2:00 PM to 4:00 PM</td>
-        </tr>
-        <!--Monday-->
-        <tr align="center">
-            <td colspan="2">Monday</td>
-            <td>CNS</td>
-            <td>PHASE-2</td>
-            <td rowspan="6"><pre align="center">
+
+11:00 AM
+To
+11:15 AM
+ 
  T 
  E 
  A 
@@ -75,12 +58,21 @@
  E 
  A 
  K 
+
+
                 </pre>
                 
             </td>
-            <td colspan="2">LABS<br> (IOT-<span style="color: red;">B1</span>) (PC-B2)</td>
-            <td rowspan="6">
+            <td>3</td>
+            <td>4</td>
+            <td rowspan="8"  class="lunch">
                 <pre>
+ 
+ 
+1:15 PM
+To
+2:00 PM
+
  L 
  U 
  N 
@@ -94,6 +86,28 @@
  K 
                 </pre>
             </td>
+            <td>5</td>
+            <td>6</td>
+            <td>7</td>
+        </tr>
+
+        <tr align="center">
+            <td>Time</td>
+            <td>9 AM to 10 AM</td>
+            <td>10 AM to 11 AM</td>
+
+            <td>11:15 AM to 12:15 PM</td>
+            <td>12:15 PM to 1:15 PM</td>
+
+            <td colspan="3">2:00 PM to 4:00 PM</td>
+        </tr>
+        <!--Monday-->
+        <tr align="center">
+            <td colspan="2">Monday</td>
+            <td>CNS</td>
+            <td>PHASE-2</td>
+
+            <td colspan="2">LABS<br> (IOT-<span style="color: red;">B1</span>) (PC-B2)</td>
             <td colspan="3">PHASE-2</td>
         </tr>
         <!--Tuesday-->
