Updated comments position for better code Clarity

--- a/Class Time Table/TimeTable.html
+++ b/Class Time Table/TimeTable.html
@@ -101,7 +101,7 @@ To
 
             <td colspan="3">2:00 PM to 4:00 PM</td>
         </tr>
-        <!--Monday-->
+<!--Monday-->
         <tr align="center">
             <td colspan="2">Monday</td>
             <td>CNS</td>
@@ -110,7 +110,7 @@ To
             <td colspan="2">LABS<br> (IOT-<span style="color: red;">B1</span>) (PC-B2)</td>
             <td colspan="3">PHASE-2</td>
         </tr>
-        <!--Tuesday-->
+<!--Tuesday-->
         <tr align="center">
             <td colspan="2">TUESDAY</td>
             <td style="color: rgb(73, 232, 73);">CNR</td>
@@ -119,7 +119,7 @@ To
             <td>CNS</td>
             <td colspan="3" > LABS<br>(IOT-<span style="color:rgb(32, 114, 247)">B3</span>)</span> (PC-<span style="color: red;">B1</span>)</td>
         </tr>
-        <!--Wednesday-->
+<!--Wednesday-->
         <tr align="center">
             <td colspan="2">WEDNESDAY</td>
             <td>PC</td>
@@ -128,7 +128,7 @@ To
             <td style="color: rgb(73, 232, 73);">CNR</td>
             <td colspan="3">GURUKUL</td>
         </tr>
-        <!--thursday-->
+<!--thursday-->
         <tr align="center">
             <td colspan="2">THURSDAY</td>
             <td>PC</td>
@@ -137,7 +137,7 @@ To
             <td style="color: rgb(73, 232, 73);">CNR</td>
             <td colspan="3">ACTIVITY</td>
         </tr>
-        <!--Friday-->
+<!--Friday-->
         <tr align="center">
             <td colspan="2">FRIDAY</td>
             <td>PC</td>
@@ -146,7 +146,7 @@ To
             <td>CNS</td>
             <td colspan="3">PHASE-2</td>
         </tr>
-        <!--saturday-->
+<!--saturday-->
         <tr align="center">
             <td colspan="2">SATURDAY</td>
             <td>CNS</td>
@@ -156,7 +156,7 @@ To
             <td colspan="3">LABS<br> (IOT-B2) (PC-<span style="color: rgb(32, 114, 247);">B3</span>)</td></td>
         </tr>
 
-        <!--Theory classes-->
+<!--Theory classes & Faculty name -->
 
         <tr> 
         </tr>
