portfolio main page done

--- a/Class Time Table/TimeTable.html
+++ b/Class Time Table/TimeTable.html
@@ -27,7 +27,7 @@
         <tr align="center">
             <td colspan="2">Department</td>
             <td colspan="3" align="left">CSE</td>
-            <td colspan="6" align="left">Semester : VII (B)</td>
+            <td colspan="6" align="left">Semester : VII<sup>th</sup> (B)</td>
         </tr>
 
         <tr align="center">
@@ -215,6 +215,10 @@ To
 
         <tr>
             <td colspan="11" > <b> Class Teacher: Prof. Varun P. Sarvade </b></td>
+        </tr>
+
+        <tr>
+            <td colspan="11"><b>H.O.D: Priyanka S. Tuppad</b></td>
         </tr>
 
     </table> 
