Changes in Index page

--- a/Mini Project/Index.html
+++ b/Mini Project/Index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <h1>AMAN INAMDAR</h1> <h5 id="topright"><button><a href="about.html">About Me</a></button></h5>
+    <h1>AMAN INAMDAR</h1> <h5 id="topright"><button><a href="about.html" target="_blank">About Me</a></button></h5>
         <hr>
     <h6 style="font-size: margin-inline-end;">
          <table>
@@ -27,27 +27,14 @@
     <img src="4.jpg" width="100" alt="Well I am Busy" >
         <br>
     <h3>This is Me, CODE BOLD.</h3> 
-    <h5 id="right"><button><a href="projects.html">Projects</a></button></h5>
+    <h5 id="right"><button><a href="projects.html" target="_blank">Projects</a></button></h5>
         <br>
         <hr>
     <a href="https://www.linkedin.com/in/aman-inamdar-450b56305" target="_blank"><button> This is my LinkedIn </button></a>
     <a href="https://github.com/amaninamdar67" target="_blank"> <button>This is my GitHub </button></a>
         <hr>
         <br>
-     <ul>
-        <h5><b>My Hobbies </b></h5>
-        <li>Reading</li>
-        <li>Researching</li> 
-        <li>Coding</li> 
-     </ul> 
-     <ol>
-        <h5>Goals for 2025</h5>
-        <li>Full stack Web Dev Completion</li>
-        <li>Exploring More about Cyber security using Kali Linux</li>
-        <li>C++ and Python</li>
-     </ol>  
-     <br>
-     <h5 id="bottom"><button><a href="contact.html">Contact me</a></button></h5><h5 id="topright"><button></button>
+     <h5 id="bottom"><button><a href="contact.html" target="_blank">Contact me</a></button></h5><h5 id="topright"><button></button>
      
             
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
