--- a/Div/div.html
+++ b/Div/div.html
@@ -4,44 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Div Example</title>
-  <style>
-    /* Styling for divs */
-    .header {
-      background-color: lightblue;
-      text-align: center;
-      padding: 20px;
-    }
-
-    .content {
-      background-color: lightgreen;
-      padding: 20px;
-      margin: 10px 0;
-    }
-
-    .footer {
-      background-color: lightcoral;
-      text-align: center;
-      padding: 15px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- Header Section -->
   <div class="header">
     <h1>Welcome to My Website</h1>
     <p>This is the header div.</p>
   </div>
 
-  <!-- Content Section -->
   <div class="content">
     <h2>About Me</h2>
     <p>This div contains the main content.</p>
   </div>
 
-  <!-- Footer Section -->
   <div class="footer">
-    <p>© 2025 My Website | Made with ❤️</p>
+    <p>© 2025 My Website | Made with Passion </p>
   </div>
 
 </body>
