--- a/More about Forms/FormsProperties.html
+++ b/More about Forms/FormsProperties.html
@@ -17,7 +17,9 @@
         </label>
         <label for="sectionidb">
           <input type="radio" value="Female" name="Gender" id="Sectionidb"> Female
-        </label>
+        </label>  
+        -|- <label for="date"><input type="date"> <button>Date of Birth</button></label>
+
       </form>
     </div>
   </body>
