Email,color input

--- a/More about Forms/FormsProperties.html
+++ b/More about Forms/FormsProperties.html
@@ -10,16 +10,21 @@
       <h1 class="heading">Types of Forms Practice</h1>
       <form action="form.php">
         <label for="textbox">
-        <input type="text" placeholder="Enter Your Name" id="textbox">
+          <input type="text" placeholder="Enter Your Name" id="textbox" />
         </label>
         <label for="Sectionida">
-          <input type="radio" value="Male" name="Gender" id="Sectionida"> Male
+          <input type="radio" value="Male" name="Gender" id="Sectionida" /> Male
         </label>
         <label for="sectionidb">
-          <input type="radio" value="Female" name="Gender" id="Sectionidb"> Female
-        </label>  
-        -|- <label for="date"><input type="date"> <button>Date of Birth</button></label>
+          <input type="radio" value="Female" name="Gender" id="Sectionidb" />
+          Female
+        </label>
+        -|-
+        <label for="dateDOB"
+          ><input type="date" name="DoB" value="DoB" id="dateDOB"> <button>Date of Birth</button></label>
 
+          <label for="color"> <input type="color" >Color</label>
+          <label><input type="email">email</label>
       </form>
     </div>
   </body>
