start of css with basic property and values and selectors

--- a/Forms/Index.html
+++ b/Forms/Index.html
@@ -9,6 +9,7 @@
     <form>
         <input type="radio" name="gender" value="male"> Male
         <input type="radio" name="female" value="female"> Female
-    </form>
+    </body> 
+</form>  
 </body>
 </html>
