--- a/More about Forms/FormsProperties.html
+++ b/More about Forms/FormsProperties.html
@@ -2,29 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Form</title>
   </head>
   <body>
     <div>
       <h1 class="heading">Types of Forms Practice</h1>
       <form action="form.php">
+        
         <label for="textbox">
-          <input type="text" placeholder="Enter Your Name" id="textbox" />
+          <input type="text" placeholder="Enter Your Name" id="textbox" >
         </label>
-        <label for="Sectionida">
-          <input type="radio" value="Male" name="Gender" id="Sectionida" /> Male
-        </label>
-        <label for="sectionidb">
-          <input type="radio" value="Female" name="Gender" id="Sectionidb" />
-          Female
-        </label>
-        -|-
-        <label for="dateDOB"
-          ><input type="date" name="DoB" value="DoB" id="dateDOB"> <button>Date of Birth</button></label>
 
-          <label for="color"> <input type="color" >Color</label>
-          <label><input type="email">email</label>
+        <label for="Sectionida">
+          <input type="radio" value="Male" name="Gender" id="Sectionida" > Male
+        </label>
+
+        <label for="sectionid">
+          <input type="radio" value="Female" name="Gender" id="Sectionid" >Female
+        </label>
+
+        <br>
+        <br>
+
+        <label for="dateDOB"
+          ><input type="date" name="DoB" value="DoB" id="dateDOB" >
+          <button>Date of Birth</button></label>
+
+        <br>
+        <br>
+
+        <label for="color"> <input type="color" />Color</label> <br><br>
+        <label><input type="email" >email</label>
+
       </form>
     </div>
   </body>
