--- a/1.CSS/basics of css/css.html
+++ b/1.CSS/basics of css/css.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS</title>
+    <link rel="icon" type="image" href="middle.png">
     <style> body{
-        background-color: rgb(116, 119, 113);
+        align-items: center;
+    }
+
+    #heading{
+        background-color: rgba(0.10, 0.10, 0.10, 0.10);
+        width: 70%;
     }
     </style>
     <link rel="stylesheet" href="style.css">
@@ -13,17 +19,20 @@
 <body>
 
     <header>
-<div>
-<h1 style="background-color: rgb(23, 132, 171); text-align: center; color: rgb(159, 97, 97);">CSS (Cascading Styles Sheets)</h1>
+<div id="heading">
+<h1 style="text-align: center; color: rgb(228, 0, 0);">CSS - Cascading Styles Sheets</h1>
 </div>
     </header>
  <body>
     <main>
         <section>
             <div id="lorem">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus eius ducimus eum facere magni, obcaecati nihil sequi corporis cum at porro impedit laborum soluta. Est, ratione provident praesentium repudiandae quam necessitatibus temporibus suscipit laudantium eveniet maiores perferendis natus ipsa quo iure eius. Reprehenderit tenetur excepturi, commodi voluptatem expedita necessitatibus incidunt!</p>
+                <p>
+CSS, or Cascading Style Sheets, is a stylesheet language used to describe the presentation and styling of a document written in a markup language like HTML. It allows web developers to control the visual appearance of web pages, including elements such as colors, fonts, layout, spacing, and responsiveness across different devices. By separating the content (HTML) from its presentation (CSS), CSS enhances maintainability, promotes consistency across multiple pages, and provides greater design flexibility than inline styling within HTML. The "cascading" aspect refers to how style rules are applied, with more specific or later-defined rules taking precedence over broader or earlier ones.
+</p>
             </div>
         </section>
     </main>    
+
 </body>
 </html>
