--- a/1.CSS/CSS-Practice/index.html
+++ b/1.CSS/CSS-Practice/index.html
@@ -15,7 +15,7 @@
     <h1 style="color: rgb(32, 146, 146);">Amazon</h1>
     <h2>NetFlix</h2>
     <h3>Flipkart</h3>
-    <button>
+    <button id="Link">
         Click here
     </button>
     
