--- a/1.CSS/CSS Practice set 2/index.html
+++ b/1.CSS/CSS Practice set 2/index.html
@@ -1,32 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alignment</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-   
-      <!-- font-weight -->
-     <h1 id="h1">Heading 1</h1>
-     <h1 id="h2">Heading 2</h1>
-     <h1 id="h3">Heading 3</h1>
-     <h1 id="h4">Heading 4</h1>
-      <h1 id="heading">Alignment</h1>
-    <div class="p">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id temporibus
-        ad nobis possimus commodi, ipsam quos praesentium odio, velit at quae
-        similique fugiat alias perspiciatis, maxime voluptatum minima officiis
-        doloremque placeat aliquid illo odit nesciunt? Tenetur perferendis
-        corrupti libero omnis reprehenderit enim, esse soluta a ducimus id
-        illum, distinctio fugit quis et numquam, ipsum blanditiis tempore
-        corporis harum mollitia magni.
-      </p>
-    </div>
-    <div class="a">
-      <a href="www.css.com" target="_blank"> click here</a>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Practice Set 2</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1 id="heading">apna college</h1>
+
+  <div id="outer"> outer
+    <div id="inner"> inner</div>
+  </div>
+  
+</body>
 </html>
