Practice set 3 Question 1 completed.

--- a/1.CSS/CSS Practice set 3/index.html
+++ b/1.CSS/CSS Practice set 3/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS level 2</title>
+    <title>Set-2 Q1</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Heading</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eos ea placeat, voluptatibus suscipit quod dignissimos quam molestias ab minus ex laudantium eaque, totam provident accusantium libero vitae inventore voluptatem. Modi nisi, cum fuga labore unde qui excepturi distinctio. Dolor minima ipsum, perspiciatis nam consequatur commodi vitae laudantium molestiae quia!</p>
-    <button>Click Here</button>
-    <div>this is div A</div>
-    <div>this is div B</div>
-    <div>this is div C</div>
-    <div id="D">D</div>
+    <div id="Q1">
+    </div>
+
+    <div id="div0"> 
+    <div id="div1"></div>
+    <div id="div2"></div>
+    <div id="div3"></div>
+    </div>
+    
 </body>
 </html>
